# GPU-Transfer-Benchmark

./: CMakeLists.txt  README.md
include/: common.h  dma_transfer.h  thread_transfer.h  transfer_benchmark.h
scripts/: build.sh
src/: common.cpp  dma_transfer.cu  main.cu  thread_transfer.cu  transfer_benchmark.cpp
